--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "priceless-map",
+  "name": "sustainable-map",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ToastHawaii/priceless-map"
+    "url": "git+https://github.com/ToastHawaii/sustainable-map"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ToastHawaii/priceless-map/issues"
+    "url": "https://github.com/ToastHawaii/sustainable-map/issues"
   },
-  "homepage": "https://github.com/ToastHawaii/priceless-map#readme",
+  "homepage": "https://github.com/ToastHawaii/sustainable-map#readme",
   "dependencies": {
     "@types/leaflet": "1.5.5",
     "@types/md5": "2.1.33",
