--- a/package.json
+++ b/package.json
@@ -30,10 +30,6 @@
     "bignumber.js": "9.0.0"
   },
   "devDependencies": {
-    "@types/clean-webpack-plugin": "0.1.3",
-    "@types/html-webpack-plugin": "3.2.1",
-    "@types/webpack": "4.1.3",
-    "@types/webpack-dev-server": "2.9.4",
     "awesome-typescript-loader": "5.2.1",
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
@@ -46,9 +42,7 @@
     "style-loader": "1.0.0",
     "typescript": "3.8.3",
     "uglify-es-webpack-plugin": "0.10.0",
-    "url-loader": "2.1.0",
     "webpack": "4.41.5",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0"
+    "webpack-cli": "3.3.12"
   }
 }
