--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
+    "less": "3.12.2",
+    "less-loader": "7.0.1",
+    "less-plugin-clean-css": "1.5.1",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
     "typescript": "4.0.3",
