--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "less": "3.12.2",
     "less-loader": "7.0.1",
     "less-plugin-clean-css": "1.5.1",
+    "mini-css-extract-plugin": "1.0.0",
     "source-map-loader": "0.2.4",
-    "style-loader": "1.0.0",
     "typescript": "4.0.3",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
