--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
     "type": "git",
     "url": "git+https://github.com/ToastHawaii/sustainable-map"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "ToastHawaii",
+  "license": "AGPL",
   "bugs": {
     "url": "https://github.com/ToastHawaii/sustainable-map/issues"
   },
   "homepage": "https://github.com/ToastHawaii/sustainable-map#readme",
   "dependencies": {
     "@babel/runtime": "7.11.2",
-    "@types/leaflet": "1.5.17",
     "@types/md5": "2.2.0",
     "@types/moment": "2.13.0",
     "details-element-polyfill": "2.4.0",
     "i18next-client": "1.11.4",
-    "leaflet-overpass-layer": "github:ToastHawaii/leaflet-overpass-layer",
+    "osm-app-component": "github:ToastHawaii/osm-app-component",
     "md5": "2.2.1",
     "moment": "2.27.0",
     "opening_hours": "3.5.0",
