--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "details-element-polyfill": "2.4.0",
     "i18next": "23.11.5",
     "i18next-client": "1.11.4",
+    "leaflet": "1.9.4",
     "leaflet-overpass-layer": "github:ToastHawaii/leaflet-overpass-layer",
     "md5": "2.3.0",
     "moment": "2.30.1",
@@ -27,6 +28,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "14.1.2",
+    "react-leaflet": "4.2.1",
     "react-scripts": "5.0.1",
     "sass": "1.77.4",
     "typescript": "4.9.5"
