--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "licenser.projectName": "Sustainable map"
+    "licenser.projectName": "Sustainable map",
+    "i18n-ally.localesPaths": [
+        "src/client/locales",
+        "src/osm-app-component/locales"
+    ]
 }
